# agentic-rag-app

./: .env.example  .gitignore  CPU_SETUP.md  DIMENSION_FIX.md  README.md  app.py  chainlit.md  chat_manager.py  clear_chroma.py  ingest.py  install_cpu_torch.ps1  install_cpu_torch.py  progress_demo.py  pyproject.toml  test_chat_history.py  test_embedding_progress.py  test_ingest.py  test_stability.py
.chainlit/: config.toml
chat_history/: b9cdcd2b-ca6f-42d0-8c56-d6a38325a340.json  f23ca2c9-e3a7-4c45-861a-64fef1fca06b.json
docs/images/: README.md
public/: style.css
src/: agent.py  vector_store.py
